# instruments

./: .travis.yml  CMakeLists.txt  Make.mm  README.md
.github/workflows/: CI.yml
AMATERAS/: run_bpp.py
AMATERAS/detector_system/: AMATERAS_detector_2021_standard.xml  AMATERAS_detector_2021_tubegap.xml  AMATERAS_program_shadow_3D_Jun2021_v1_NOBeamstop.py  Mask2021.xml  convert_det_systems.py
ARCS/ARCS/: beam_postprocessing.py  cli.py  fermichopper.py  moderator.py  t0chopper.py
ARCS/ARCS/applications/: Beam.py  Events2Nxs.py  M2S.py  Neutrons2Events.py  nxs.py  utils.py
ARCS/tests/ARCS/applications/: nxs_TestCase.py
ARCS/tests/applications/arcs-m2s/: App_TestCase.py
ARCS/tests/applications/arcs_moderator2sample/: run.sh
ARCS/tests/detsys/: DetectorSystem_TestCase.py  pickonepixel.py
ARCS/tests/workflows/Al-300K/: Workflow_TestCase.py
CNCS/CNCS/: beam_postprocessing.py  cli.py
CNCS/CNCS/applications/: Beam.py  Config_Moderator2Sample.py  Events2Nxs.py  Neutrons2Events.py  nxs.py  utils.py
CNCS/etc/cncs_moderator2sample/: cncs_moderator2sample.pml
CNCS/tests/CNCS/: beam_postprocessing_TestCase.py
CNCS/tests/CNCS/applications/: nxs_TestCase.py
CNCS/tests/applications/beam/: app_TestCase.py  clean
CSNS/sans/ssd/: print_events.py
HYSPEC/: CMakeLists.txt  Make.mm
HYSPEC/HYSPEC/: beam_postprocessing.py
HYSPEC/HYSPEC/applications/: Beam.py  Config_Moderator2Sample.py  nxs.py
HYSPEC/etc/hyspec_moderator2sample/: hyspec_moderator2sample.pml
LET/detector_system/: LET_detector_2021.xml  convert_det_system.py
SEQUOIA/: CMakeLists.txt
SEQUOIA/SEQUOIA/: SEQ_virtual.yml  SEQ_virtual_12292017_mcvine.xml  SEQ_virtual_Definition_12292017.xml  __init__.py  beam_postprocessing.py  cli.py  fermichopper.py  mantid2mcvine.py  moderator.py  t0chopper.py
SEQUOIA/SEQUOIA/applications/: Beam.py  M2S.py  Neutrons2Nxs.py  __init__.py  nxs.py
SEQUOIA/etc/sequoia_moderator2sample/: sequoia_moderator2sample.pml
SEQUOIA/mantid2mcvine/: README.md  run.py
SEQUOIA/mantid2mcvine/testsim/: V-scatterer.xml  createnxs.py  model.py  reduce.py  run.sh
SNS/: Make.mm
SNS/SNS/applications/: Events2Nxs.py  Neutrons2Events.py  Neutrons2Nxs.py
VULCAN/applications/: mcstasconverter.py  peak_generator.py
VULCAN/tests/sample-kernel-detector-system/: ssd1_1.pml
VULCAN/utils/: hdf5converter.py  pyrestripper.py
builders/conda-recipe/: build.sh  create_conda_pkg.sh  meta.yaml.template
builders/github-actions/: build_and_test.sh  conda_build_and_upload.sh
builders/travis/: build.sh
instruments/: __init__.py  _version.py  beam_analyzer.odb  dgs_bpp.py  dgs_bpp_analyze_beam.pml  dgs_bpp_analyze_beam.py
(+6 files in other folders)
